[package]
name = "parsecute"
version = "0.1.0"
authors = ["Didier Plaindoux <d.plaindoux@free.fr>"]
description = "Rust Parser Combinators"
repository = "https://github.com/d-plaindoux/parsec.rust"
edition = "2018"

[dependencies]
bencher = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "json"
harness = false

